[package]
name = "review-web"
version = "0.27.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-graphql = { version = "7", features = ["chrono", "string_number"] }
async-graphql-axum = "7"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "tokio", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
bincode = "1"
chrono = { version = ">=0.4.35,<0.4.40", default-features = false, features = [
  "serde",
] }
futures = "0.3"
futures-util = "0.3"
http = "1"
ip2location = "0.5.4"
ipnet = { version = "2", features = ["serde"] }
jsonwebtoken = "9"
num-traits = "0.2"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
] }
review-database = { git = "https://github.com/petabi/review-database.git", rev = "da68b65" }
roxy = { git = "https://github.com/aicers/roxy.git", tag = "0.5.0" }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] } # should be the same version as what reqwest depends on
rustls-native-certs = "0.8"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.27"
strum_macros = "0.27"
thiserror = "2"
tokio = "1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
vinum = { git = "https://github.com/vinesystems/vinum.git", tag = "1.0.3" }

[dev-dependencies]
assert-json-diff = "2"
config = { version = "0.15", features = ["toml"], default-features = false }
futures = "0.3"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "minireview"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
